implemented SmsManager for android

--- a/TotalCrossVM/builders/vc2008/TCVM.vcproj
+++ b/TotalCrossVM/builders/vc2008/TCVM.vcproj
@@ -2581,6 +2581,14 @@
 				</Filter>
 			</Filter>
 			<Filter
+				Name="telephony"
+				>
+				<File
+					RelativePath="..\..\src\nm\telephony\SmsManager.c"
+					>
+				</File>
+			</Filter>
+			<Filter
 				Name="crypto"
 				>
 				<File
