Adding the firebase C file to VS solutions

--- a/TotalCrossVM/builders/vc2008/TCVM.vcproj
+++ b/TotalCrossVM/builders/vc2008/TCVM.vcproj
@@ -2589,6 +2589,14 @@
 				</File>
 			</Filter>
 			<Filter
+				Name="firebase"
+				>
+				<File
+					RelativePath="..\..\src\nm\firebase\firbase.c"
+					>
+				</File>
+			</Filter>
+			<Filter
 				Name="crypto"
 				>
 				<File
