fixes path to LitebaseLib.tcz when building the TotalCross.apk

--- a/TotalCrossVM/builders/droid/build.gradle
+++ b/TotalCrossVM/builders/droid/build.gradle
@@ -89,7 +89,7 @@ android {
 		from ('../../../TotalCrossSDK/etc/fonts') {
 			include 'TCFont.tcz'
 		}
-		from ('../../../../Litebase/LitebaseSDK/dist/lib/') {
+		from ('../../../LitebaseSDK/dist/lib/') {
 			include 'LitebaseLib.tcz'
 		}
 		entryCompression ZipEntryCompression.STORED
