--- a/TotalCrossSDK/.classpath
+++ b/TotalCrossSDK/.classpath
@@ -22,5 +22,9 @@
 	<classpathentry kind="lib" path="etc/libs/truezip/truezip-file-7.5.1.jar"/>
 	<classpathentry kind="lib" path="etc/libs/truezip/truezip-kernel-7.5.1.jar"/>
 	<classpathentry kind="lib" path="etc/libs/truezip/truezip-swing-7.5.1.jar"/>
+	<classpathentry kind="lib" path="etc/libs/appdirs-1.0.0.jar"/>
+	<classpathentry kind="lib" path="etc/libs/jna-platform-4.2.2.jar"/>
+	<classpathentry kind="lib" path="etc/libs/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="etc/libs/jna-4.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
