changed attribute main-class of jar's manifest, not sure it is actually used though

--- a/TotalCrossSDK/build.gradle
+++ b/TotalCrossSDK/build.gradle
@@ -17,7 +17,7 @@ configurations {
 
 jar {
     manifest {
-        attributes('Main-Class': '..........')
+        attributes('Main-Class': 'totalcross.Launcher')
     }
 }
 
